[package]
name = "solution_lib"
version = "0.1.0"
authors = ["csitika <bnorbertjs@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "*"
diesel = { version = "1.0.0", features = ["postgres"] }
diesel_derives = { version = "1.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.8"
r2d2-diesel = "1.0.0"
jwt = "*"
hyper = "*"
rust-crypto = "*"
bcrypt = "0.1"
frank_jwt = "*"